bugfix: fixed layout issues on mobile

--- a/src/components/feed/Feed.module.css
+++ b/src/components/feed/Feed.module.css
@@ -59,7 +59,7 @@
   }
 
   .btnLoadMore {
-    margin: 0 auto 0 1.5rem;
+    margin: 0 auto 0 auto;
   }
 
   .btnBackToTop {
