--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -156,4 +156,8 @@
   .btnNewPost {
     display: none;
   }
+
+  .header {
+    margin-bottom: 4rem;
+  }
 }
