--- a/src/pages/profile/editProfile/EditProfile.module.css
+++ b/src/pages/profile/editProfile/EditProfile.module.css
@@ -34,6 +34,14 @@
 
 @media only screen and (max-width: 850px) {
   .container {
-    width: 90%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    column-gap: 1rem;
+  }
+
+  .tabs {
+    width: 100%;
+    margin-bottom: 2rem;
   }
 }
